--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
       <version>9.40</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+      <version>2.6.0</version>
+    </dependency>
+
   </dependencies>
 
 	<build>
@@ -114,7 +120,8 @@
           </execution>
         </executions>
       </plugin>
-			<plugin>
+
+      <plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
