--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.hibernate.ddl-auto=update
 # JWT settings
 jwt.private.key=classpath:keys/app.key
 jwt.public.key=classpath:keys/app.key.pub
+
+#Swagger
+
