--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,17 @@
       <version>9.40</version>
     </dependency>
 
+    <!--flyway-->
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+      <version>10.10.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-database-postgresql</artifactId>
+    </dependency>
+
   </dependencies>
 
 	<build>
@@ -114,6 +125,22 @@
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+        <groupId>org.flywaydb</groupId>
+        <artifactId>flyway-maven-plugin</artifactId>
+        <version>10.10.0</version>
+        <configuration>
+          <url>jdbc:postgresql://localhost:5432/expensebee</url>
+          <user>expensebee</user>
+          <password>expensebee</password>
+          <locations>
+            <location>classpath:db/migration/schema</location>
+            <location>classpath:db/migration/seeds</location>
+          </locations>
+        </configuration>
+      </plugin>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
