--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-# Spring Boot settings
-spring.main.allow-bean-definition-overriding=true
-
 # Datasource settings
 spring.datasource.url=jdbc:postgresql://localhost:5432/expensebee
 spring.datasource.username=expensebee
@@ -12,3 +9,11 @@ spring.jpa.hibernate.ddl-auto=update
 # JWT settings
 jwt.private.key=classpath:keys/app.key
 jwt.public.key=classpath:keys/app.key.pub
+
+#Flyway
+spring.flyway.enabled=true
+spring.flyway.url=${spring.datasource.url}
+spring.flyway.user=${spring.datasource.username}
+spring.flyway.password=${spring.datasource.password}
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
