--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
       <artifactId>nimbus-jose-jwt</artifactId>
       <version>9.40</version>
     </dependency>
-    
+
     <!--flyway-->
     <dependency>
       <groupId>org.flywaydb</groupId>
@@ -101,8 +101,8 @@
     <dependency>
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-database-postgresql</artifactId>
-    </dependency> 
-    
+    </dependency>
+
     <!--Swagger-->
     <dependency>
       <groupId>org.springdoc</groupId>
@@ -126,6 +126,12 @@
     <dependency>
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-database-postgresql</artifactId>
+    </dependency>
+
+    <!--Email-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-mail</artifactId>
     </dependency>
 
   </dependencies>
