--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,11 @@ spring.flyway.user=${spring.datasource.username}
 spring.flyway.password=${spring.datasource.password}
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
+
+#Email
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=04dc6700b1ad04
+spring.mail.password=6163c9e0c152c7
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
