feat: switch docker for supabase

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Datasource settings
-spring.datasource.url=jdbc:postgresql://localhost:5432/expensebee
-spring.datasource.username=expensebee
-spring.datasource.password=expensebee
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 # JPA settings
 spring.jpa.hibernate.ddl-auto=update
